--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Web developer porfolio</title>
 
 </head>
 <body>
     <header>
+        <nav>
+            <h3 class="nav-title">Pr<span class="text-primary">o</span>tt<span class="text-primary">o</span>y</h3>
+        <ul>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Blog</a></li>
+            <li><button class="btn-primary">Hire me</button></li>
+        </ul>
+        </nav>
 
     </header>
     <main>
