--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Pr<span class="text-primary">o</span>tt<span class="text-primary">o</span>y</h3>
         <ul>
@@ -20,9 +20,21 @@
             <li><button class="btn-primary">Hire me</button></li>
         </ul>
         </nav>
+        <div class="banner">
+            <div>
+               <h3 class="banner-greeting">Hi, I am</h3>
+               <h1 class="Banner-title">Prottoy Das</h1>
+               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet ut nobis iusto dolores inventore iste consequuntur laborum quidem exercitationem ullam.</p>
+               <button class="btn-primary">Download CV</button>
+               <button class="btn-primary">Contact</button>
+            </div>
+            <img class="pro-pic" src="images/hardy.png" alt="" srcset="">
+
+        </div>
 
     </header>
     <main>
+
 
     </main>
     <footer>
