added about section and contain

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </ul>
         </nav>
         <div class="banner">
-            <div>
+            <div class="banner-content">
                <h3 class="banner-greeting">Hi, I am</h3>
                <h1 class="Banner-title">Prottoy Das</h1>
-               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet ut nobis iusto dolores inventore iste consequuntur laborum quidem exercitationem ullam.</p>
+               <p class="banner-descript">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet ut nobis iusto dolores inventore iste consequuntur laborum quidem exercitationem ullam.</p>
                <button class="btn-primary">Download CV</button>
                <button class="btn-primary">Contact</button>
             </div>
@@ -34,6 +34,15 @@
 
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-titile">
+                About Me
+            </h3>
+            <p class="section-descript">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ab atque quisquam rerum? Mollitia necessitatibus dolore, corporis id, dicta possimus adipisci temporibus, quasi minima fuga ex similique assumenda architecto iusto doloribus. Magnam ullam tempore cupiditate ut consequatur nisi animi saepe.
+            </p>
+
+        </section>
 
 
     </main>
