--- a/index.html
+++ b/index.html
@@ -41,6 +41,25 @@
             <p class="section-descript">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ab atque quisquam rerum? Mollitia necessitatibus dolore, corporis id, dicta possimus adipisci temporibus, quasi minima fuga ex similique assumenda architecto iusto doloribus. Magnam ullam tempore cupiditate ut consequatur nisi animi saepe.
             </p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name</h4>
+                    <p class="info-description">Prottoy Das</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email</h4>
+                    <p class="info-description">dasprottoy05@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title"></h4>
+                    <p class="info-description"></p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title"></h4>
+                    <p class="info-description"></p>
+                </div>
+            </div>
+
 
         </section>
 
