what i do section added

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                     <p class="info-description">dasprottoy05@gmail.com</p>
                 </div>
                 <div class="about-info">
-                    <h4 class="info-title"></h4>
-                    <p class="info-description"></p>
+                    <h4 class="info-title">Date of Birth</h4>
+                    <p class="info-description">5 dec 1998</p>
                 </div>
                 <div class="about-info">
-                    <h4 class="info-title"></h4>
-                    <p class="info-description"></p>
+                    <h4 class="info-title">From</h4>
+                    <p class="info-description">Chittagong</p>
                 </div>
             </div>
 
