--- a/index.html
+++ b/index.html
@@ -63,6 +63,79 @@
 
         </section>
 
+        <section>
+            <h3 class="section-titile">What I do</h3>
+            <p id="what-I-do-description" class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis velit facere labore, voluptatem sapiente ipsam excepturi! Magni unde modi sit? Ducimus nemo adipisci nobis quis quae odio voluptatem totam vel perspiciatis tenetur natus consequuntur rerum animi provident, architecto nesciunt iusto?</p>
+        </section>
+        <div class="skills-container">
+            <div class="skill">
+                <img src="images/icons/insta.png" alt="">
+                <h3 class="skill-title">Vanila JavaScript</h3>
+                <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at quia unde dolorum adipisci eveniet reiciendis qui esse dolores consectetur!</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/react.png" alt="">
+                <h3 class="skill-title">React</h3>
+                <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga et voluptate vel maxime est doloremque nisi fugit odit. Vero, eaque.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="">
+                <h3 class="skill-title">Node.js</h3>
+                <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente architecto temporibus eius perspiciatis, asperiores dolore illum deleniti nemo eligendi officia?</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/mongo.png" alt="">
+                <h3 class="skill-title">MongoDb</h3>
+                <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores voluptate at voluptatum aut illo iure optio unde beatae veritatis quod.</p>
+            </div>
+        </div>
+
+        <section>
+            <h3 class="section-titile">A Summery of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                </div>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                </div>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                </div>
+            </div>
+        </section>
+
 
     </main>
     <footer>
