--- a/index.html
+++ b/index.html
@@ -93,46 +93,55 @@
         <section>
             <h3 class="section-titile">A Summery of My Resume</h3>
             <div class="resume-container">
+                
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                        <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                        <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                        <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                    </div>
                 </div>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
-                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
-                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
-                </div>
-                <hr>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
-                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
-                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
-                </div>
-                <hr>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
-                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
-                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
-                </div>
+
+
+
+
                 <div class="resume-column">
-                    <h3 class="resume-column-title">My Education</h3>
+                    <h3 class="resume-column-title">Experience</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                        <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                        <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Sceince</h2>
+                        <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
+                    </div>
                 </div>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
-                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
-                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
-                </div>
-                <hr>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
-                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
-                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
-                </div>
-                <hr>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Master in Computer Sceince</h2>
-                    <h3 class="resume-item-institute">Harvard University/2015-2017</h3>
-                    <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odit tempora inventore iste aliquid esse quod perferendis dicta, nostrum sit.</p>
-                </div>
+            </div>
+
+            <div class="download-cv">
+                <div class="btn-primary">Download Cv</div>
             </div>
         </section>
 
