--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">let's message me</h3>
+            <form class="contact">
+                <input type="text" placeholder="Your name">
+                <input type="email" name="" placeholder="Your Email">
+                <textarea name="" id=""></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+                
+            </form>
+
         </div>
     </footer>
     
