--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <header class="header">
+    <header class="header hide">
         <nav>
             <h3 class="nav-title">Pr<span class="text-primary">o</span>tt<span class="text-primary">o</span>y</h3>
         <ul>
@@ -63,7 +63,7 @@
 
         </section>
 
-        <section>
+        <section class="skills">
             <h3 class="section-titile">What I do</h3>
             <p id="what-I-do-description" class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis velit facere labore, voluptatem sapiente ipsam excepturi! Magni unde modi sit? Ducimus nemo adipisci nobis quis quae odio voluptatem totam vel perspiciatis tenetur natus consequuntur rerum animi provident, architecto nesciunt iusto?</p>
         </section>
@@ -90,7 +90,7 @@
             </div>
         </div>
 
-        <section>
+        <section class="resume">
             <h3 class="section-titile">A Summery of My Resume</h3>
             <div class="resume-container">
                 
@@ -147,7 +147,7 @@
 
 
     </main>
-    <footer>
+    <footer class="footer">
         <div class="footer-column">
             <h3 class="section-title">Lets connect</h3>
             <p class="section-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, dolorem animi vero deleniti nostrum sit?</p>
