--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 </head>
 <body>
-    <header class="header hide">
-        <nav>
+    <header class="header">
+        <nav class="navbar">
             <h3 class="nav-title">Pr<span class="text-primary">o</span>tt<span class="text-primary">o</span>y</h3>
         <ul>
             <li><a href="">Portfolio</a></li>
